@@ -41,6 +41,7 @@ CONFIG_MINIX_FS=y
 CONFIG_ROMFS_FS=n
 CONFIG_ELKSFS_FS=n
 CONFIG_FULL_VFS=n
+CONFIG_FS_EXTERNAL_BUFFER=y
 CONFIG_PIPE=y
 CONFIG_FS_RO=n
 CONFIG_EXEC_SUGID=n
