@@ -1,7 +1,11 @@
 /*
- * Automatically generated by make menuconfig: don't edit
+ * Automatically generated C config: don't edit
  */
 #define AUTOCONF_INCLUDED
+
+/*
+ * Just accept the defaults unless you know what you are doing
+ */
 
 /*
  * General setup
@@ -10,6 +14,7 @@
 #undef  CONFIG_ARCH_SIBO
 #undef  CONFIG_ARCH_PC_XT
 #undef  CONFIG_ARCH_PC_AT
+#undef  CONFIG_ARCH_PC_MCA
 #undef  CONFIG_MODULE
 #undef  CONFIG_SHLIB
 #undef  CONFIG_COMPAQ_FAST
@@ -33,11 +38,19 @@
 /*
  * Embedded systems
  */
+
+/*
+ * Currently unimplemented features for use in embedded systems
+ */
 #undef  CONFIG_NOFS
 #undef  CONFIG_EXEC_ROM
 
 /*
  * Character device drivers
+ */
+
+/*
+ * Select a console driver
  */
 #define CONFIG_CONSOLE_DIRECT 1
 #undef  CONFIG_CONSOLE_BIOS
@@ -51,6 +64,10 @@
 #undef  CONFIG_ES_KEYMAP
 #undef  CONFIG_DE_KEYMAP
 #define CONFIG_DEFAULT_KEYMAP 1
+
+/*
+ * Other character devices
+ */
 #define CONFIG_CHAR_DEV_RS 1
 #define CONFIG_CHAR_DEV_LP 1
 #define CONFIG_CHAR_DEV_MEM 1
@@ -68,7 +85,15 @@
 #undef  CONFIG_BLK_DEV_XD
 #undef  CONFIG_DMA
 #define CONFIG_GENDISK 1
+
+/*
+ * Additional block devices
+ */
 #undef  CONFIG_BLK_DEV_RAM
+
+/*
+ * Block device options
+ */
 #define CONFIG_BLK_DEV_CHAR 1
 
 /*
@@ -77,10 +102,19 @@
 #define CONFIG_MINIX_FS 1
 #undef  CONFIG_ROMFS_FS
 #undef  CONFIG_ELKSFS_FS
+
+/*
+ * General filesystem settings
+ */
 #undef  CONFIG_FULL_VFS
+#define CONFIG_FS_EXTERNAL_BUFFER 1
 #define CONFIG_PIPE 1
 #undef  CONFIG_FS_RO
-#define CONFIG_EXEC_SUGID 1
+
+/*
+ * Executable file formats
+ */
+#undef  CONFIG_EXEC_SUGID
 #define CONFIG_EXEC_MINIX 1
 #undef  CONFIG_EXEC_MSDOS
 
